--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
         <div class="row">
 		<div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <image class="icon" src="/assets/img/icons/green-power.png"/>
-            <h4 class="title">Bioenergy Sorghum (2024)</h4>
-            <p class="description">Compiling a compendium of RNA data and elucidating the flowering time pathway. 
+            <h4 class="title">Bioenergy Sorghum (2024-2025)</h4>
+            <p class="description">Compiling a compendium of RNA data and elucidating the flowering time pathway using DEseq, Kmeans clustering, and transgenics. 
 			</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
@@ -216,7 +216,7 @@
 			<image class="icon" src="/assets/img/icons/wheat.png"/>
             <h4 class="title">FT-A2 / bZIPC1 (2017-2022)</h4>
             <p class="description">Improved wheat yield potential by identifying, characterizing, and incorporating an 
-			<i>FT2</i> allele and it's interacter for increased grain number.</p>
+			<i>FT2</i> allele and it's interacter, bZIPC1, for increased grain number.</p>
           </div>
 		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <image class="icon" src="/assets/img/icons/farmer.png"/>
@@ -341,24 +341,24 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> R & RStudio - advanced </li>
                   <li><i class="bi bi-chevron-right"></i> Python - intermediate </li>
-                  <li><i class="bi bi-chevron-right"></i> Perl - beginner </li>
-				  <li><i class="bi bi-chevron-right"></i> SQL - beginner </li>
+                  <li><i class="bi bi-chevron-right"></i> SQL - intermediate </li>
+				  <li><i class="bi bi-chevron-right"></i> Perl - beginner </li>
                 </ul>
               </div>
               <div class="col-lg-4">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> Differential Expression</li>
 				  <li><i class="bi bi-chevron-right"></i> Phylogenetic analysis</li>
-                  <li><i class="bi bi-chevron-right"></i> Mesquite</li>
-				  <li><i class="bi bi-chevron-right"></i> MrBayes </li>
+                  <li><i class="bi bi-chevron-right"></i> Kmeans Clustering</li>
+				  <li><i class="bi bi-chevron-right"></i> Mesquite & MrBayes </li>
                 </ul>
               </div>
 			  <div class="col-lg-4">
                 <ul>
-				  <li><i class="bi bi-chevron-right"></i> Gene Ontology </li>	
+				  <li><i class="bi bi-chevron-right"></i> Gene Ontology </li>
+				  <li><i class="bi bi-chevron-right"></i> Single-Cell ATAC </li>				  
 				  <li><i class="bi bi-chevron-right"></i> Microsoft Excel </li>			
-                  <li><i class="bi bi-chevron-right"></i> Adobe Illustrator</li>
-                  <li><i class="bi bi-chevron-right"></i> Adobe Photoshop</span></li>
+                  <li><i class="bi bi-chevron-right"></i> Adobe Illustrator/Photoshop</li>
 			   </ul>
 			  </div> 
 			<hr class="greenhr"/>
@@ -367,7 +367,7 @@
               <div class="col-lg-4">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> Oral & written communication </li>
-                  <li><i class="bi bi-chevron-right"></i> Conflict management </li>
+                  <li><i class="bi bi-chevron-right"></i> Conflict resolution </li>
                   <li><i class="bi bi-chevron-right"></i> Manuscript writing </li>
                 </ul>
               </div>
