--- a/index.html
+++ b/index.html
@@ -251,6 +251,49 @@
       </div>
     </section><!-- End Research Section -->
 
+<!-- ======= Mentoring Section ======= -->
+    <section id="Society" class="mentoring">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Leadership</h2>
+        </div>
+		
+         <div class="row">
+		<div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <image class="icon" src="/assets/img/icons/green-power.png"/>
+            <h4 class="title"> GLBRC outreach (Summer 2025) </h4>
+            <p class="description">Working with the Great Lakes Bioenergy Research Center (GLBRC) to start outreach programs revolving around bioenergy in the Bryan/College Station area </p>
+          </div>		  
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <image class="icon" src="/assets/img/icons/transparent-tubes.png"/>
+            <h4 class="title">Mullet Lab Mentor (Summer 2025)</h4>
+            <p class="description"> Training and mentoring an undergraduate assistants in greenhouse work, laboratory techniques, breeding practices, and professional soft skills
+			</p>
+          </div>    		  
+		  <image class="icon" src="/assets/img/icons/teacher.png"/>
+            <h4 class="title">GLBRC Mentor (Spring 2025)</h4>
+            <p class="description">Mentored a GLBRC member to develop their network, professional skills, and understanding of the GLBRC goals and processes  
+			</p>
+          </div>
+     	  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <image class="icon" src="/assets/img/icons/graduate-cap.png"/>
+            <h4 class="title">Postdoctoral Mentoring Academy (Spring 2025) </h4>
+            <p class="description">Completed a six session workshop which trained attendees how to be a successful mentor and set goals/expectations as a mentee</p>
+          </div>
+		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+			<image class="icon" src="/assets/img/icons/graduate-cap.png"/>
+            <h4 class="title">Bayer Unviersity Mentoring Program (2024)</h4>
+            <p class="description">Mentored by a Bayer scientist to generate/complete professional development goals and received coaching to improve soft skills</p>
+          </div>
+        </div>
+
+        </div>
+    </section><!-- End Mentoring Section -->
+
+
  <!-- ======= Publications Section ======= -->
     <section id="Publications" class="publications">
       <div class="container">
@@ -267,20 +310,22 @@
 		
         <div class="row no-gutters">
           <div class="align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-		  <p> 1) Lamb A, Kurtz E, <b> Glenn P,</b> McKinley B, Mullet J. (2024). Bioenergy Sorghum Nodal Root Bud Development: Morphometric, Transcriptomic and Gene Regulatory Network Analysis. 
+		  
+		  <p> 1) Yu KMJ, Weers BD, McKinley BA, <b>Glenn PD,</b> Kurtz E, Rooney WL, Mullet JE. (2025). Bioenergy Sorghum Stem Density Increases Threefold Following Internode Elongation Due to 
+		  Continued Accumulation of Lignified Cell Walls and Complex Regulation of Genes Involved in Cell Wall Biosynthesis. <i>Biotechnol. Biofuels Bioprod. </i> 18, 58
+		  <a href="https://doi.org/10.1186/s13068-025-02659-w" target="_blank"> https://doi.org/10.1186/s13068-025-02659-w </a>
+		  </p>		  
+		  <p> 2) Lamb A, Kurtz E, <b> Glenn P,</b> McKinley B, Mullet J. (2024). Bioenergy Sorghum Nodal Root Bud Development: Morphometric, Transcriptomic and Gene Regulatory Network Analysis. 
 		  <i> Frontiers in Plant Science, 15 </i>. <a href="https://doi.org/10.3389/fpls.2024.1456627" target="_blank">
 		  https://doi.org/10.3389/fpls.2024.1456627</a>
-		  <p> 2) <b>Glenn P,</b> Woods DP, Zhang J, Gabay G, Odle N, Dubcovsky J. (2023).
+		  <p> 3) <b>Glenn P,</b> Woods DP, Zhang J, Gabay G, Odle N, Dubcovsky J. (2023).
 		  Wheat bZIPC1 interacts with FT2 and contributes to the regulation of spikelet number per spike. <i> Theoretical and Applied Genetics, 136, </i> 237. 
 		  <a href="https://doi.org/10.1007/s00122-023-04484-x" target="_blank"> https://doi.org/10.1007/s00122-023-04484-x </a>
 		  </p>
-		  <p> 3) <b>Glenn P,</b> Zhang J, Brown-Guedira G, Dewitt N, Cook JP, Li K, Akhunov E, Dubcovsky J. (2022). 
+		  <p> 4) <b>Glenn P,</b> Zhang J, Brown-Guedira G, Dewitt N, Cook JP, Li K, Akhunov E, Dubcovsky J. (2022). 
 		  Identification and characterization of a natural polymorphism in <i> FT-A2 </i> associated with increased number of grains per spike in wheat. 
 		  <i> Theoretical and Applied Genetics, 135, </i> 679–692. <a href="https://doi.org/10.1007/s00122-021-03992-y" target="_blank">
 		  https://doi.org/10.1007/s00122-021-03992-y </a> 
-		  </p>
-		  <p> 4) Yu KMJ, Weers B, McKinley B, <b>Glenn P,</b> Kurtz E, Rooney W, Mullet J. (2025). Increased bioenergy sorghum stem density after internode elongation is due to accumulation of 
-		  lignified cell walls and complex regulation of cell wall biosynthesis gene expression. <i>(in prep, Biotechnol. Biofuels)</i>
 		  </p>
 		  <p> 5) <b>Glenn P,</b> Hjelmen CJ, Gafford-Gaby RD, Shum A, Blackmon H. (2025). The fitness of the rare sex is destined to decline.
 		  <i>(in prep, PNAS)</i>
