--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
       </div>
     </section><!-- End Research Section -->
 
-<!-- ======= Mentoring Section ======= -->
-    <section id="Society" class="mentoring">
+<!-- ======= Leadership Section ======= -->
+    <section id="Leadership" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -260,8 +260,6 @@
         </div>
 		
          <div class="row">
-		<div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <image class="icon" src="/assets/img/icons/green-power.png"/>
             <h4 class="title"> GLBRC outreach (Summer 2025) </h4>
@@ -270,14 +268,15 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <image class="icon" src="/assets/img/icons/transparent-tubes.png"/>
             <h4 class="title">Mullet Lab Mentor (Summer 2025)</h4>
-            <p class="description"> Training and mentoring an undergraduate assistants in greenhouse work, laboratory techniques, breeding practices, and professional soft skills
+            <p class="description"> Training and mentoring an undergraduate assistant in greenhouse work, laboratory techniques, breeding practices, and professional soft skills
 			</p>
-          </div>    		  
+		  </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">    		  
 		  <image class="icon" src="/assets/img/icons/teacher.png"/>
             <h4 class="title">GLBRC Mentor (Spring 2025)</h4>
             <p class="description">Mentored a GLBRC member to develop their network, professional skills, and understanding of the GLBRC goals and processes  
 			</p>
-          </div>
+		  </div>
      	  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <image class="icon" src="/assets/img/icons/graduate-cap.png"/>
             <h4 class="title">Postdoctoral Mentoring Academy (Spring 2025) </h4>
@@ -291,7 +290,7 @@
         </div>
 
         </div>
-    </section><!-- End Mentoring Section -->
+    </section><!-- End Leadership Section -->
 
 
  <!-- ======= Publications Section ======= -->
