--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#Education" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Education</span></a></li>
-          <li><a href="#Research" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research</span></a></li>
+          <li><a href="#Experience" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Experience</span></a></li>
+		  <li><a href="#Leadership" class="nav-link scrollto"><i class="bx bx-pen"></i> <span>Leadership</span></a></li>
           <li><a href="#Publications" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
           <li><a href="#Skills" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Skills</span></a></li>
           <li hidden><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Skills2</span></a></li>
@@ -249,7 +250,7 @@
         </div>
 
       </div>
-    </section><!-- End Research Section -->
+    </section><!-- End Experience Section -->
 
 <!-- ======= Leadership Section ======= -->
     <section id="Leadership" class="services">
