--- a/index.html
+++ b/index.html
@@ -257,28 +257,28 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Leadership</h2>
+          <h2>Leadership Highlights</h2>
         </div>
 		
          <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" >
             <image class="icon" src="/assets/img/icons/green-power.png"/>
             <h4 class="title"> GLBRC outreach (Summer 2025) </h4>
             <p class="description">Working with the Great Lakes Bioenergy Research Center (GLBRC) to start outreach programs revolving around bioenergy in the Bryan/College Station area </p>
           </div>		  
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <image class="icon" src="/assets/img/icons/transparent-tubes.png"/>
             <h4 class="title">Mullet Lab Mentor (Summer 2025)</h4>
             <p class="description"> Training and mentoring an undergraduate assistant in greenhouse work, laboratory techniques, breeding practices, and professional soft skills
 			</p>
 		  </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">    		  
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">    		  
 		  <image class="icon" src="/assets/img/icons/teacher.png"/>
             <h4 class="title">GLBRC Mentor (Spring 2025)</h4>
             <p class="description">Mentored a GLBRC member to develop their network, professional skills, and understanding of the GLBRC goals and processes  
 			</p>
 		  </div>
-     	  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+     	  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" >
             <image class="icon" src="/assets/img/icons/graduate-cap.png"/>
             <h4 class="title">Postdoctoral Mentoring Academy (Spring 2025) </h4>
             <p class="description">Completed a six session workshop which trained attendees how to be a successful mentor and set goals/expectations as a mentee</p>
@@ -287,6 +287,15 @@
 			<image class="icon" src="/assets/img/icons/graduate-cap.png"/>
             <h4 class="title">Bayer Unviersity Mentoring Program (2024)</h4>
             <p class="description">Mentored by a Bayer scientist to generate/complete professional development goals and received coaching to improve soft skills</p>
+          </div>
+		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+			<image class="icon" src="/assets/img/icons/wheat.png"/>
+            <h4 class="title">Wheat Breeding from Plow-to-Plate Webinar (Fall 2020)</h4>
+            <p class="description"> Host of the WheatCAP Fall 2020 Webinar Series. These videos can be found <b> <a href="https://triticeaecap.ucdavis.edu/2020-webinar-series"
+		   target="_blank"> HERE </a></b> and cover a range of topics.
+		  </p>
+			
+			</p>
           </div>
         </div>
 
@@ -329,16 +338,7 @@
 		  </p>
 		  <p> 5) <b>Glenn P,</b> Hjelmen CJ, Gafford-Gaby RD, Shum A, Blackmon H. (2025). The fitness of the rare sex is destined to decline.
 		  <i>(in prep, PNAS)</i>
-		  </p>
-		  <p> </p>
-		  <p>
-		  <h3>	Other</h3>
-		  </p>
-		  <p>	Host of the WheatCAP Fall 2020 Webinar Series, <b>"Wheat Breeding from Plow-to-Plate"</b>. These educational videos can be found <b> <a href="https://triticeaecap.ucdavis.edu/2020-webinar-series"
-		   target="_blank"> HERE </a></b> and cover a range of topics.
-		  </p>
-		  
-		  
+		  </p> 
             </div>
           </div>
 
