--- a/index.html
+++ b/index.html
@@ -289,13 +289,15 @@
             <p class="description">Mentored by a Bayer scientist to generate/complete professional development goals and received coaching to improve soft skills</p>
           </div>
 		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+			<image class="icon" src="/assets/img/icons/dna1.png"/>
+            <h4 class="title">EcoEvolution Retreat (Fall 2023) </h4>
+            <p class="description"> Member of Planning Team – Coordinated speakers, meals, and social activities </p>
+          </div>
+		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
 			<image class="icon" src="/assets/img/icons/wheat.png"/>
             <h4 class="title">Wheat Breeding from Plow-to-Plate Webinar (Fall 2020)</h4>
             <p class="description"> Host of the WheatCAP Fall 2020 Webinar Series. These videos can be found <b> <a href="https://triticeaecap.ucdavis.edu/2020-webinar-series"
-		   target="_blank"> HERE </a></b> and cover a range of topics.
-		  </p>
-			
-			</p>
+		   target="_blank"> HERE </a></b> and cover a range of topics. </p>
           </div>
         </div>
 
