--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 		  
 		  <a = href="https://scholar.google.com/citations?user=FIDQHX0AAAAJ&hl=en" target="_blank" >
 		  <image class="w3-image" src="/assets/img/icons/google-scholar.png" style="max-width:50px; filter: hue-rotate(230deg);" data-aos="fade-up">
-		  <label data-aos="fade-up" class="aos-animate">Google Scholar</label> </a>
+		  <label data-aos="fade-up">Google Scholar</label>  </a>
 		  </p>
         </div>
 		
