--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@
 		  <p>
 		  
 		  <a = href="https://scholar.google.com/citations?user=FIDQHX0AAAAJ&hl=en" target="_blank" >
-		  <image class="w3-image" src="/assets/img/icons/google-scholar.png" style="max-width:50px; filter: hue-rotate(230deg);" data-aos="fade-up">
-		  <label data-aos="fade-up">Google Scholar</label>  </a>
+		  <image class="w3-image" src="/assets/img/icons/google-scholar.png" style="max-width:50px; filter: hue-rotate(230deg);" data-aos="fade-in">
+		  <label data-aos="fade-in">Google Scholar</label>  </a>
 		  </p>
         </div>
 		
         <div class="row no-gutters">
-          <div class="align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="align-items-md-stretch" data-aos="fade-in" data-aos-delay="100">
 		  
 		  <p> 1) Yu KMJ, Weers BD, McKinley BA, <b>Glenn PD,</b> Kurtz E, Rooney WL, Mullet JE. (2025). Bioenergy Sorghum Stem Density Increases Threefold Following Internode Elongation Due to 
 		  Continued Accumulation of Lignified Cell Walls and Complex Regulation of Genes Involved in Cell Wall Biosynthesis. <i>Biotechnol. Biofuels Bioprod. </i> 18, 58
