--- a/index.html
+++ b/index.html
@@ -299,6 +299,12 @@
             <p class="description"> Host of the WheatCAP Fall 2020 Webinar Series. These videos can be found <b> <a href="https://triticeaecap.ucdavis.edu/2020-webinar-series"
 		   target="_blank"> HERE </a></b> and cover a range of topics. </p>
           </div>
+		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+			<image class="icon" src="/assets/img/icons/flying-flag.png"/>
+            <h4 class="title"><i>Altius</i> - Graduate Student Group President (Summer 2018 - Spring 2020)</h4>
+            <p class="description">  Created a leadership team to delegate responsibilities, discussed group needs with diocesan representatives, 
+			mediated and resolved conflicts between members, and coordinated fundraisers, retreats, and weekly meetings	</p>
+          </div>		  
         </div>
 
         </div>
